--- a/index.html
+++ b/index.html
@@ -6,185 +6,280 @@
     <title>apple</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header class="flex align-item justify-content gap-24">
-      <img src="/images/logo.svg" />
-      <ul class="list-style-type flex gap-24">
-        <li class="p-3">
-          <a href="" class="text-decoration-none text-center">
-            <span class="text-small text-white">Store</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">Mac</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">iPad</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">iPhone</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">Watch</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">AirPods</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">TV & Home</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">Only on Apple</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">Accessories</span>
-          </a>
-        </li>
-        <li class="p-3">
-          <a href="" class="text-decoration-none">
-            <span class="text-small text-white">Support</span>
-          </a>
-        </li>
-      </ul>
-      <img src="/images/searchIcon.svg" />
-      <img src="/images/Buy.svg" />
-
-    <div class="flex justify-content flex-direction">
-      <div class="banner">
-        <img src="/images/spiritedMovie.svg" />
-        <div class="bannerText magrin-auto">
-          <p>A new musical comedy based on a holiday classic.</p>
-          <p>Now streaming</p>
+  <body class="">
+    <div class="">
+      <header class="flex align-item justify-content gap-24">
+        <img src="/images/logo.svg" />
+        <ul class="list-style-type flex gap-24">
+          <li class="p-3">
+            <a href="" class="text-decoration-none text-center">
+              <span class="text-small text-white">Store</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">Mac</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">iPad</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">iPhone</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">Watch</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">AirPods</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">TV & Home</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">Only on Apple</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">Accessories</span>
+            </a>
+          </li>
+          <li class="p-3">
+            <a href="" class="text-decoration-none">
+              <span class="text-small text-white">Support</span>
+            </a>
+          </li>
+        </ul>
+        <img src="/images/searchIcon.svg" />
+        <img src="/images/Buy.svg" />
+      </header>
+      <div class="flex justify-content flex-direction width">
+        <section>
+          <img src="/images/spiritedMovie.svg" width="100%" />
+          <div class="bannerText magrin-auto">
+            <p>A new musical comedy based on a holiday classic.</p>
+            <p>Now streaming</p>
+          </div>
+        </section>
+        <section class="positionRelative">
+          <img src="/images/iPhone14.svg" alt="" width="100%" />
+          <div
+            class="sectionText flex flex-direction justify-content align-item"
+          >
+            <h1>iPhone 14</h1>
+            <p>Big and bigger.</p>
+            <div class="LinkText flex">
+              <span>Learn more</span>
+              <span>Buy</span>
+            </div>
+          </div>
+        </section>
+        <section class="productCards grid">
+          <div class="positionRelative gridIPhone14">
+            <img src="/images/iPhone14Pro.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item whiteColor"
+            >
+              <h1>iPhone 14 Pro</h1>
+              <p>Pro. Beyond.</p>
+              <div class="LinkText flex">
+                <span>Learn more</span>
+                <span>Buy</span>
+              </div>
+            </div>
+          </div>
+          <div class="positionRelative gridIPad">
+            <img src="/images/iPad.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item"
+            >
+              <h1>iPad</h1>
+              <p>Lovaple. Drawable. Magical.</p>
+              <div class="LinkText flex">
+                <span>Learn more</span>
+                <span>Buy</span>
+              </div>
+            </div>
+          </div>
+          <div class="positionRelative gridAirpods">
+            <img src="/images/airPods.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item"
+            >
+              <h1>AirPod</h1>
+              <p>Share the joy</p>
+              <div class="LinkText flex">
+                <span>Shop</span>
+              </div>
+            </div>
+          </div>
+          <div class="positionRelative gridWatch">
+            <img src="/images/iwatch.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item whiteColor"
+            >
+              <h1>Watch</h1>
+              <p class="series">Series 8</p>
+              <p>Pro. Beyond.</p>
+              <div class="LinkText flex">
+                <span>Learn more</span>
+                <span>Buy</span>
+              </div>
+            </div>
+          </div>
+          <div class="positionRelative gridWatchUltra">
+            <img src="/images/iwatchUltra.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item"
+            >
+              <h1>Watch</h1>
+              <p class="ultra">Ultra</p>
+              <p>Adventure awaits.</p>
+              <div class="LinkText flex">
+                <span>Learn more</span>
+                <span>Buy</span>
+              </div>
+            </div>
+          </div>
+          <div class="positionRelative gridCard">
+            <img src="/images/iCard.svg" alt="" width="100%" />
+            <div
+              class="sectionText flex flex-direction justify-content align-item"
+            >
+              <h1>Card</h1>
+              <p>Get up to 3% Daily Cash back white every purchase.</p>
+              <div class="LinkText flex">
+                <span>Learn more</span>
+                <span>Apply now</span>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="banner"></div>
+        <div class="banner"></div>
+      </div>
+      <footer class="margin-auto">
+        <div class="flex justify-content gap-24">
+          <section>
+            <h5 class="p-b-12">Shop and Learn</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Store</p>
+              <p>Mac</p>
+              <p>iPad</p>
+              <p>iPhone</p>
+              <p>Watch</p>
+              <p>AirPods</p>
+              <p>TV & Home</p>
+              <p>AirTag</p>
+              <p>Accessories</p>
+              <p>Gift Card</p>
+            </div>
+          </section>
+          <section>
+            <h5 class="p-b-12">Services</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Apple Music</p>
+              <p>Apple TV+</p>
+              <p>Apple Fitness+</p>
+              <p>Apple News+</p>
+              <p>Apple Arcade</p>
+              <p>iCloud</p>
+              <p>Apple One</p>
+              <p>Apple Card</p>
+              <p>Apple Books</p>
+              <p>Apple Podcasts</p>
+              <p>Apple Store</p>
+            </div>
+            <h5 class="p-b-12">Account</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Manage Your Apple ID</p>
+              <p>Apple Store Account</p>
+              <p>iCloud.com</p>
+            </div>
+          </section>
+          <section>
+            <h5 class="p-b-12">Apple Store</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Find a Store</p>
+              <p>Genius Bar</p>
+              <p>Today at Apple</p>
+              <p>Apple Camp</p>
+              <p>Apple Store App</p>
+              <p>Refurbished and Clearance</p>
+              <p>Financing</p>
+              <p>Apple Trade In</p>
+              <p>Order Status</p>
+              <p>Shopping Help</p>
+            </div>
+          </section>
+          <section>
+            <h5 class="p-b-12">For Business</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Apple and Business</p>
+              <p>Shop for Business</p>
+            </div>
+            <h5 class="p-b-12">For Education</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Apple and Education</p>
+              <p>Shop for K-12</p>
+              <p>Shop for College</p>
+            </div>
+            <h5 class="p-b-12">For Healthcare</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Apple in Healthcare</p>
+              <p>Health on Apple Watch</p>
+              <p>Health Records on iPhone</p>
+              <p>iPhone</p>
+            </div>
+            <h5 class="p-b-12">For Government</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Shop for Government</p>
+              <p>Shop for Veterans and Military</p>
+            </div>
+          </section>
+          <section>
+            <h5 class="p-b-12">Apple Values</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Accessibility</p>
+              <p>Education</p>
+              <p>Environment</p>
+              <p>Inclusion and Diversity</p>
+              <p>Privacy</p>
+              <p>Racial Equity and Justice</p>
+              <p>Supplier Responsibility</p>
+            </div>
+            <h5 class="p-b-12">About Apple</h5>
+            <div class="grid gap-12 text-small text-gred p-b-24">
+              <p>Newsroom</p>
+              <p>Apple Leadership</p>
+              <p>Career Opportunities</p>
+              <p>Investors</p>
+              <p>Ethics & COmpliance</p>
+              <p>Events</p>
+              <p>Contact Apple</p>
+            </div>
+          </section>
         </div>
-      </div>
-      <div class="banner">
-        <img src="/images/iPhone14.svg" alt="" />
-      </div>
+        <div>
+          <p>
+            More ways to shop: Find an Apple Store or other retailer near you.
+          </p>
+          <span>Or call 1-800-MY-APPLE.</span>
+          <p>Copyright © 2022 Apple Inc. All rights reserved.</p>
+        </div>
+      </footer>
     </div>
-    <footer class="margin-auto">
-      <div class="flex justify-content gap-24">
-        <section>
-          <h5 class="p-b-12">Shop and Learn</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Store</p>
-            <p>Mac</p>
-            <p>iPad</p>
-            <p>iPhone</p>
-            <p>Watch</p>
-            <p>AirPods</p>
-            <p>TV & Home</p>
-            <p>AirTag</p>
-            <p>Accessories</p>
-            <p>Gift Card</p>
-          </div>
-        </section>
-        <section>
-          <h5 class="p-b-12">Services</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Apple Music</p>
-            <p>Apple TV+</p>
-            <p>Apple Fitness+</p>
-            <p>Apple News+</p>
-            <p>Apple Arcade</p>
-            <p>iCloud</p>
-            <p>Apple One</p>
-            <p>Apple Card</p>
-            <p>Apple Books</p>
-            <p>Apple Podcasts</p>
-            <p>Apple Store</p>
-          </div>
-          <h5 class="p-b-12">Account</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Manage Your Apple ID</p>
-            <p>Apple Store Account</p>
-            <p>iCloud.com</p>
-          </div>
-        </section>
-        <section>
-          <h5 class="p-b-12">Apple Store</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Find a Store</p>
-            <p>Genius Bar</p>
-            <p>Today at Apple</p>
-            <p>Apple Camp</p>
-            <p>Apple Store App</p>
-            <p>Refurbished and Clearance</p>
-            <p>Financing</p>
-            <p>Apple Trade In</p>
-            <p>Order Status</p>
-            <p>Shopping Help</p>
-          </div>
-        </section>
-        <section>
-          <h5 class="p-b-12">For Business</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Apple and Business</p>
-            <p>Shop for Business</p>
-          </div>
-          <h5 class="p-b-12">For Education</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Apple and Education</p>
-            <p>Shop for K-12</p>
-            <p>Shop for College</p>
-          </div>
-          <h5 class="p-b-12">For Healthcare</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Apple in Healthcare</p>
-            <p>Health on Apple Watch</p>
-            <p>Health Records on iPhone</p>
-            <p>iPhone</p>
-          </div>
-          <h5 class="p-b-12">For Government</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Shop for Government</p>
-            <p>Shop for Veterans and Military</p>
-          </div>
-        </section>
-        <section>
-          <h5 class="p-b-12">Apple Values</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Accessibility</p>
-            <p>Education</p>
-            <p>Environment</p>
-            <p>Inclusion and Diversity</p>
-            <p>Privacy</p>
-            <p>Racial Equity and Justice</p>
-            <p>Supplier Responsibility</p>
-          </div>
-          <h5 class="p-b-12">About Apple</h5>
-          <div class="grid gap-12 text-small text-gred p-b-24">
-            <p>Newsroom</p>
-            <p>Apple Leadership</p>
-            <p>Career Opportunities</p>
-            <p>Investors</p>
-            <p>Ethics & COmpliance</p>
-            <p>Events</p>
-            <p>Contact Apple</p>
-          </div>
-        </section>
-      </div>
-      <div>
-        <p>
-          More ways to shop: Find an Apple Store or other retailer near you.
-        </p>
-        <span>Or call 1-800-MY-APPLE.</span>
-        <p>Copyright © 2022 Apple Inc. All rights reserved.</p>
-      </div>
-    </footer>
   </body>
 </html>
