--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       </header>
       <div class="flex justify-content flex-direction width">
         <section>
-          <img src="/images/spiritedMovie.svg" width="100%" />
+          <img src="images/spiritedMovie.svg" width="100%" />
           <div class="bannerText magrin-auto">
             <p>A new musical comedy based on a holiday classic.</p>
             <p>Now streaming</p>
           </div>
         </section>
         <section class="positionRelative">
-          <img src="/images/iPhone14.svg" alt="" width="100%" />
+          <img src="./images/iPhone14.svg" alt="" width="100%" />
           <div
             class="sectionText flex flex-direction justify-content align-item"
           >
