--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="">
     <div class="">
       <header class="flex align-item justify-content gap-24">
-        <img src="/images/logo.svg" />
+        <img src="./images/logo.svg" />
         <ul class="list-style-type flex gap-24">
           <li class="p-3">
             <a href="" class="text-decoration-none text-center">
@@ -62,12 +62,12 @@
             </a>
           </li>
         </ul>
-        <img src="/images/searchIcon.svg" />
-        <img src="/images/Buy.svg" />
+        <img src="./images/searchIcon.svg" />
+        <img src="./images/Buy.svg" />
       </header>
       <div class="flex justify-content flex-direction width">
         <section>
-          <img src="images/spiritedMovie.svg" width="100%" />
+          <img src="../images/spiritedMovie.svg" width="100%" />
           <div class="bannerText magrin-auto">
             <p>A new musical comedy based on a holiday classic.</p>
             <p>Now streaming</p>
@@ -88,7 +88,7 @@
         </section>
         <section class="productCards grid">
           <div class="positionRelative gridIPhone14">
-            <img src="/images/iPhone14Pro.svg" alt="" width="100%" />
+            <img src="./images/iPhone14Pro.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item whiteColor"
             >
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="positionRelative gridIPad">
-            <img src="/images/iPad.svg" alt="" width="100%" />
+            <img src="./images/iPad.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
             >
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="positionRelative gridAirpods">
-            <img src="/images/airPods.svg" alt="" width="100%" />
+            <img src="./images/airPods.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
             >
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class="positionRelative gridWatch">
-            <img src="/images/iwatch.svg" alt="" width="100%" />
+            <img src="./images/iwatch.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item whiteColor"
             >
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="positionRelative gridWatchUltra">
-            <img src="/images/iwatchUltra.svg" alt="" width="100%" />
+            <img src="./images/iwatchUltra.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
             >
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="positionRelative gridCard">
-            <img src="/images/iCard.svg" alt="" width="100%" />
+            <img src="./images/iCard.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
             >
