--- a/index.html
+++ b/index.html
@@ -67,31 +67,33 @@
       </header>
       <div class="flex justify-content flex-direction width">
         <section>
-          <img src="../images/spiritedMovie.svg" width="100%" />
+          <img src="./images/spiritedMovie.svg" width="100%" />
           <div class="bannerText magrin-auto">
             <p>A new musical comedy based on a holiday classic.</p>
             <p>Now streaming</p>
           </div>
         </section>
-        <section class="positionRelative">
+        <section>
           <img src="./images/iPhone14.svg" alt="" width="100%" />
           <div
-            class="sectionText flex flex-direction justify-content align-item"
+            class="flex flex-direction justify-content align-item magrin-auto"
           >
-            <h1>iPhone 14</h1>
-            <p>Big and bigger.</p>
-            <div class="LinkText flex">
-              <span>Learn more</span>
-              <span>Buy</span>
+            <div class="bannerProduct text-center">
+              <h1>iPhone 14</h1>
+              <p>Big and bigger.</p>
+              <div class="bannerLinkText flex">
+                <span>Learn more</span>
+                <span>Buy</span>
+              </div>
             </div>
           </div>
         </section>
         <section class="productCards grid">
-          <div class="positionRelative gridIPhone14">
+          <div
+            class="positionRelative flex justify-content gridIPhone14 flex justify-content"
+          >
             <img src="./images/iPhone14Pro.svg" alt="" width="100%" />
-            <div
-              class="sectionText flex flex-direction justify-content align-item whiteColor"
-            >
+            <div class="sectionText flex flex-direction align-item whiteColor">
               <h1>iPhone 14 Pro</h1>
               <p>Pro. Beyond.</p>
               <div class="LinkText flex">
@@ -100,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div class="positionRelative gridIPad">
+          <div class="positionRelative flex justify-content gridIPad">
             <img src="./images/iPad.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
@@ -113,7 +115,7 @@
               </div>
             </div>
           </div>
-          <div class="positionRelative gridAirpods">
+          <div class="positionRelative flex justify-content gridAirpods">
             <img src="./images/airPods.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
@@ -125,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="positionRelative gridWatch">
+          <div class="positionRelative flex justify-content gridWatch">
             <img src="./images/iwatch.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item whiteColor"
@@ -139,7 +141,7 @@
               </div>
             </div>
           </div>
-          <div class="positionRelative gridWatchUltra">
+          <div class="positionRelative flex justify-content gridWatchUltra">
             <img src="./images/iwatchUltra.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
@@ -153,7 +155,7 @@
               </div>
             </div>
           </div>
-          <div class="positionRelative gridCard">
+          <div class="positionRelative flex justify-content gridCard">
             <img src="./images/iCard.svg" alt="" width="100%" />
             <div
               class="sectionText flex flex-direction justify-content align-item"
@@ -272,11 +274,10 @@
             </div>
           </section>
         </div>
-        <div>
+        <div class="footerText">
           <p>
             More ways to shop: Find an Apple Store or other retailer near you.
           </p>
-          <span>Or call 1-800-MY-APPLE.</span>
           <p>Copyright © 2022 Apple Inc. All rights reserved.</p>
         </div>
       </footer>
